# Planet

./: CMakeLists.txt  vcpkg.json
bench/: bench_planet.cpp
include/: planet.h  vec.h
src/: main.cpp  planet.cpp  vec.cpp
test/: test_vec.cpp
